--- a/landing/static/locales/fr-FR.json
+++ b/landing/static/locales/fr-FR.json
@@ -19,6 +19,8 @@
 	"support-project": "Soutenez Vibe !",
 	"support-vibe": "Ambiance de soutien",
 	"support-while-you-wait": "En attendant, pensez à soutenir le projet Vibe pour nous aider à grandir !",
+        "language": "Langue",
+        "select-language": "Sélectionner une langue",
 	"title": "Transcription audio locale.",
 	"your-download-is-starting": "Votre téléchargement commence..."
 }
