--- a/landing/static/locales/he-IL.json
+++ b/landing/static/locales/he-IL.json
@@ -19,6 +19,8 @@
 	"support-project": "תמכו ב-Vibe!",
 	"support-vibe": "תמיכה בVibe",
 	"support-while-you-wait": "בזמן שאתה מחכה, שקול לתמוך בפרויקט Vibe כדי לעזור לנו לצמוח!",
+        "language": "שפה",
+        "select-language": "בחר שפה",
 	"title": "תמלל קבצי אודיו או וידאו!",
 	"your-download-is-starting": "ההורדה שלך מתחילה..."
 }
