--- a/landing/static/locales/ko-KR.json
+++ b/landing/static/locales/ko-KR.json
@@ -19,6 +19,8 @@
     "support-project": "Vibe 지원하기!",
     "support-vibe": "Vibe 지원하기",
     "support-while-you-wait": "기다리는 동안, Vibe 프로젝트를 후원하여 저희의 성장을 도와주는 것을 고려해 주세요!",
+        "language": "언어",
+        "select-language": "언어 선택",
     "title": "받아쓰기. 나의 기기에서.",
     "your-download-is-starting": "다운로드가 시작되었습니다..."
 }
