--- a/landing/static/locales/no-NO.json
+++ b/landing/static/locales/no-NO.json
@@ -19,6 +19,8 @@
 	"support-project": "Støtt Vibe!",
 	"support-vibe": "Støtt Vibe",
 	"support-while-you-wait": "Mens du venter, vurder å støtte Vibe-prosjektet for å hjelpe oss med å vokse!",
+        "language": "Språk",
+        "select-language": "Velg språk",
 	"title": "Transkriber. På din egen måte.",
 	"your-download-is-starting": "Nedlastingen din starter..."
 }
