--- a/landing/static/locales/pl-PL.json
+++ b/landing/static/locales/pl-PL.json
@@ -19,6 +19,8 @@
 	"support-project": "Wspieraj Vibe!",
 	"support-vibe": "Wspomóż Vibe",
 	"support-while-you-wait": "Czekając, rozważ wsparcie projektu Vibe, który pomoże nam się rozwijać!",
+        "language": "Język",
+        "select-language": "Wybierz język",
 	"title": "Transkrybuj. po swojemu.",
 	"your-download-is-starting": "Rozpoczyna się pobieranie..."
 }
