--- a/landing/static/locales/pt-BR.json
+++ b/landing/static/locales/pt-BR.json
@@ -19,6 +19,8 @@
 	"support-project": "Apoie a Vibe!",
 	"support-vibe": "Apoiar Vibe",
 	"support-while-you-wait": "Enquanto espera, considere apoiar o projeto Vibe para nos ajudar a crescer!",
+        "language": "Idioma",
+        "select-language": "Selecione o idioma",
 	"title": "Transcreva. por conta própria.",
 	"your-download-is-starting": "Seu download está começando..."
 }
