--- a/landing/static/locales/zh-CN.json
+++ b/landing/static/locales/zh-CN.json
@@ -19,6 +19,8 @@
 	"support-project": "支持 Vibe！",
 	"support-vibe": "支持 Vibe",
 	"support-while-you-wait": "等待时，不妨考虑支持 Vibe 项目，帮助我们成长！",
+        "language": "语言",
+        "select-language": "选择语言",
 	"title": "自主转录。",
 	"your-download-is-starting": "您的下载即将开始..."
 }
