--- a/landing/static/locales/zh-HK.json
+++ b/landing/static/locales/zh-HK.json
@@ -19,6 +19,8 @@
 	"support-project": "支持 Vibe！",
 	"support-vibe": "支持 Vibe",
 	"support-while-you-wait": "等待時，不妨考慮支持 Vibe 項目，幫助我們成長！",
+        "language": "語言",
+        "select-language": "選擇語言",
 	"title": "自主轉錄。",
 	"your-download-is-starting": "您的下載即將開始..."
 }
