--- a/landing/static/locales/es-MX.json
+++ b/landing/static/locales/es-MX.json
@@ -19,6 +19,8 @@
 	"support-project": "¡Apoya la vibra!",
 	"support-vibe": "Apoya a Vibe",
 	"support-while-you-wait": "Mientras espera, considere apoyar el proyecto Vibe para ayudarnos a crecer.",
+        "language": "Idioma",
+        "select-language": "Seleccionar Idioma",
 	"title": "Transcribe. Por ti mismo(a).",
 	"your-download-is-starting": "Tu descarga está comenzando..."
 }
