--- a/landing/static/locales/ru-RU.json
+++ b/landing/static/locales/ru-RU.json
@@ -19,6 +19,8 @@
 	"support-project": "Поддержать Vibe!",
 	"support-vibe": "Поддержать Vibe",
 	"support-while-you-wait": "Пока вы ждете, возможно вы захотите поддержать проект Vibe, это поможет нам развивать его дальше!",
+        "language": "Язык",
+        "select-language": "Выбрать язык",
 	"title": "Транскрибируйте сами, без посторонней помощи",
 	"your-download-is-starting": "Загрузка начинается..."
 }
